testsuite/tests/typecheck/should_fail/T22560_fail_b.stderr

T22560_fail_b.hs:6:1: error: [GHC-58589]
    Illegal invisible type variable binder: @a
    Suggested fix: Perhaps you intended to use TypeAbstractions
